Implement getScoreDetails on Golf Canada client with caching (#122)
