# src/main/kotlin/com/kenjdavidson/golf/handicap/verification/api/GolfCanadaScoreDetailsLookupService.kt
@@ -1,0 +1,7 @@
+package com.kenjdavidson.golf.handicap.verification.api
+
+import com.kenjdavidson.golf.handicap.golfcanada.model.ScoreDetails
+
+interface GolfCanadaScoreDetailsLookupService {
+    fun getScoreDetails(scoreId: Long): ScoreDetails?
+}
